--- a/src/css/login.scss
+++ b/src/css/login.scss
@@ -9,40 +9,48 @@ body{
     min-height:100%;
     min-width: 100%;
    background-color:#DCDCDC;
-   .LoginPage{
-      opacity:1;
-      display: flex;
+}
+.LoginPage{
+   opacity:1;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   
+   @media(max-width:950px){
+      display:grid;
       align-items: center;
-      justify-content: space-between;
-      @media(max-width:950px){
-         display:block;
-         #Forum{
-            width: 96%;
-            margin-top: 30px;
-            margin:2px auto;
-            max-width: 700px;
-            margin: 3rem auto;
-            font-size: 30%;   
-            height:650px;
-         }
-         #border{
-            margin:0;
-            padding:0;
+      justify-content: center;
+      place-items: center;
+          position: absolute;
+    top: 50%;  
+    left: 50%; 
+    transform: translate(-50%, -50%);
+      #Forum{
+        width:90vw;
+         font-size: 30%;   
+         height:650px;
+         padding:auto;
+         margin:auto;
+      }
+      .LoginPage{
+         margin:auto;
+      }
+      #border{
+         margin:0;
+         padding:0;
 
+      }
+      #Welcome-section{
+         font-size:30px;
+         margin-bottom:10px;
+         text-align:center;
+         p{
+            font-size:0;
          }
-         #Welcome-section{
-            font-size:30px;
-            margin-bottom:10px;
-            text-align:center;
-            p{
-               font-size:0;
-            }
-          
-         }
+       
       }
    }
 }
-
 #Forum{
    opacity:1;
    background-color: white;
